ISPN-8447 Allow building with JDK 9 GA
Requires --add-modules=java.xml.bind for karaf-maven-plugin.